# rag-api

./: .dockerignore  .env.bak  .gitignore  CLAUDE.md  DEPLOYMENT_OPTIMIZATION.md  Dockerfile  Dockerfile.dev  Dockerfile.qdrant  README.md  README.zh-CN.md  deploy.sh  docker-compose.dev.yml  docker-compose.new-stack.yml  docker-compose.yml  env.example  main.py  pyproject.toml  ruff.toml  test_lightrag_doc_status_api.py  test_rag_api.py  test_results.md  test_tenant_config.sh  test_tenant_config_isolation.sh
.docker/: buildkit.toml
api/: README.md  __init__.py  documents.py  files.py  insert.py  models.py  monitor.py  query.py  task.py  task_store.py  tenant.py  tenant_config.py
deploy/: nginx.conf
docs/: API_COMPARISON.md  ARCHITECTURE.md  ASYNC_PROCESSING.md  AWS_MIGRATION_GUIDE.md  COMPREHENSIVE_TEST_ANALYSIS.md  DEPLOYMENT_EXTERNAL_STORAGE.md  DEPLOYMENT_REPORT.md  DEPLOY_MODES.md  DOCKER_BUILD_OPTIMIZATION.md  DOCKER_HEALTHCHECK_BEST_PRACTICES.md  DOCKER_OPTIMIZATION.md  EC2_OPTIMIZATION_SUMMARY.md  EMBEDDING_DIM_FIX.md  FINAL_TEST_REPORT.md  FRONTEND_API_INTEGRATION_GUIDE.md  FRONTEND_BUG_FIX_REPORT.md  IMPROVEMENTS.md  LIGHTRAG_IMPLEMENTATION_GUIDE.md  LIGHTRAG_WEBUI_INTEGRATION.md  LIGHTRAG_WORKER_MECHANISM_SOURCE_CODE_ANALYSIS.md  MINERU_REMOTE_API.md  MULTI_TENANT_CONFIG_BEST_PRACTICES.md  OPTIMIZATION_GUIDE.md  OPTIONAL_ENHANCEMENTS.md  PERFORMANCE_ANALYSIS.md  PRODUCTION_MIGRATION_GUIDE.md  PRODUCTION_MIGRATION_QUICKSTART.md  PROJECT_STRUCTURE.md  PR_WORKFLOW.md  README.md  REMOTE_DEPLOYMENT_TEST_REPORT.md  REMOTE_MINERU_DEPLOYMENT.md  SUMMARY.md  (+13 more)
(+52 files in other folders)
