[project]
name = "rag-api"
version = "0.1.0"
description = "RAG API with multimodal document processing"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "lightrag-hku==1.4.9.4",
    "raganything[all]>=1.2.8",
    "aiohttp>=3.9.0",
    "requests>=2.31.0",
    "loguru>=0.7.0",
    "psutil>=5.9.0",
    # External storage dependencies
    "redis>=5.0.0",        # for RedisKVStorage
    "asyncpg>=0.29.0",     # for PGVectorStorage
    "neo4j>=5.14.0",       # for Neo4JStorage
]
